Added Create and Get routes for /user
